--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 * {
 	text-align: center;
 }
+html {
+  scroll-behavior: smooth;
+}
 </style>
 </head>
 <body>
 </body>
-<p>lol<p>
 <script>
 // ---------------------------- //
 //                              //
@@ -18,13 +20,12 @@
 //                              //
 // ---------------------------- //
 class Card {
-	constructor(chain, name, params) {
-		chain.push(this);
+	constructor(name, params) {
 		this.name = name;
 		this.img = params.img;
 		this.title = params.title;
 		this.body = params.body;
-		this.next = params.next
+		this.next = params.next;
 		this.params = this.params;
 	}
 	add() {
@@ -32,13 +33,17 @@ class Card {
 		this.append(this.img, {type: 'img'});
 		this.append(this.title, {type: 'title'});
 		this.append(this.body, {type: 'body'});
+		this.append(this.next[0], {type: 'next'});
 	}
 	append(text, params) {
 		if (params.type == 'title') {
 			var elem = document.createElement('h1');
 		} else if (params.type == 'img') {
 			var elem = document.createElement('img');
-			elem.setAttribute('src', 'https://i.ibb.co/7nH9JL0/anymore-test-1.png');
+			elem.setAttribute('src', text);
+		} else if (params.type == 'next') {
+			var elem = document.createElement('button');
+			elem.setAttribute('onclick', 'Card2.add();');
 		} else {
 			var elem = document.createElement('p');
 		}
@@ -49,8 +54,7 @@ class Card {
 
 var main = [];
 
-var Card1 = new Card(main, '1', {title: 'HEY!', body: 'Welcome to Anymore Engine!', next: 'n'})
+var Card1 = new Card('1', {title: 'HEY!', img: 'https://i.ibb.co/7nH9JL0/anymore-test-1.png', body: 'Welcome to Anymore Engine!', next: ['==>', Card2]})
+var Card2 = new Card('2', {title: 'What\'s that, you say?', img: 'https://i.ibb.co/sHLwBgb/anymore-test-2.png', body: 'Anymore engine is a lighweight visual novel engine.', next: ''})
 Card1.add();
 </script>
-<img src="https://i.ibb.co/ZgS3n5L/anymore-test-1.png">
-</body>
