Changed the way images work

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ class Card {
 
 var main = [];
 
-var Card1 = new Card('1', {title: 'HEY!', img: 'https://i.ibb.co/7nH9JL0/anymore-test-1.png', body: 'Welcome to Anymore Engine!', next: ['==>', Card2]})
-var Card2 = new Card('2', {title: 'What\'s that, you say?', img: 'https://i.ibb.co/sHLwBgb/anymore-test-2.png', body: 'Anymore engine is a lighweight visual novel engine.', next: ''})
+var Card1 = new Card('1', {title: 'HEY!', img: 'anymore-test-1.png', body: 'Welcome to Anymore Engine!', next: ['==>', Card2]})
+var Card2 = new Card('2', {title: 'What\'s that, you say?', img: 'anymore-test-2.png', body: 'Anymore engine is a lighweight visual novel engine.', next: ''})
 Card1.add();
 </script>
